--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
     background: #1f1f1f;
     border-radius: 15px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    width: 600px; /* Mengubah lebar card */ 
+    width: 600px; 
     padding: 20px;
     box-sizing: border-box;
     color: #ffffff;
